# nana-template-axum

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  server.rs  state.rs
src/route/: hello.rs  mod.rs
