[package]
name = "nana-template-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["multipart"]}
axum-extra = {version = "0.9.3",features = ["typed-header"]}
tower-http = {version = "0.5.2", features = ["fs","cors"]}
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
anyhow = "1.0.71"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["json"]}
envy = "0.4.2"
